add animation for all components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   </li>
 </ul>
 
-<form class="text-center" [formGroup]="form">
+<form data-aos="fade-up" class="text-center" [formGroup]="form">
   <fieldset>
     <label>
       <input type="text" placeholder="Título da Tarefa" maxlength="60" formControlName="title">
